@linux-laptop §5.3 Mocking